# nba-agent

./: .gitignore  AGENT_LEARNING_RECORD.md  README.md  pyproject.toml  setup.py
config/: agent_filter.json  delivery.json  hupu.json  keywords.json  prompts.json  report.json  tieba.json
eval/: dataset.json
nba_agent/: __init__.py  app.py  config.py  eval.py  http.py  models.py
nba_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nba_agent/collectors/: __init__.py  base.py  demo.py  hupu.py  hupu_parser.py  official.py  tieba.py  tieba_parser.py
nba_agent/delivery/: __init__.py  console.py  webhook.py
nba_agent/pipeline/: __init__.py  agent_filter.py  dedupe.py  facts.py  keywords.py  report.py  source_priority.py
nba_agent/scheduler/: __init__.py  daily_job.py
nba_agent/storage/: sqlite_store.py
prompts/filter/: filter_v1.txt  filter_v2.txt
prompts/summary/: summary_v1.txt  summary_v2.txt
