[project]
name = "nba-agent"
version = "0.1.0"
description = "NBA daily info agent scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiotieba>=4.6.1,<5",
]

[project.scripts]
nba-agent = "nba_agent.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
